--- a/.github/workflows/main_veer-mono-webapp.yml
+++ b/.github/workflows/main_veer-mono-webapp.yml
@@ -26,13 +26,15 @@ jobs:
       - name: npm install, build
         run: |
           npm install
-          CI=false npm run build
+
+      - name: Build
+        run: CI=false npm run build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: react-build
+          path: build
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,7 +47,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: react-build
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -63,3 +65,4 @@ jobs:
           package: .
 
           
+
