--- a/.github/workflows/main_veer-webapp-frontend.yml
+++ b/.github/workflows/main_veer-webapp-frontend.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
+          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -37,23 +38,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_17E94F5947D44987A0418B3C8F70CAFA }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DA8F2B2FE04B4B45858F45CE0CFEBC46 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9F7B6CA7952F436F9B6CC8B856B13701 }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -61,6 +52,4 @@ jobs:
           app-name: 'veer-webapp-frontend'
           slot-name: 'Production'
           package: .
-
-          
-
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5172778751244821990C462661DD79E8 }}
