Update Azure Web App deployment workflow

--- a/.github/workflows/main_veer-mono-webapp.yml
+++ b/.github/workflows/main_veer-mono-webapp.yml
@@ -60,11 +60,12 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'veer-mono-webapp'
+          app-name: 'veer-webapp-frontend'
           slot-name: 'Production'
           package: .
 
           
+
 
 
 
