--- a/.github/workflows/main_veer-webapp-frontend.yml
+++ b/.github/workflows/main_veer-webapp-frontend.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: react-build
+          path: build
 
   deploy:
     runs-on: ubuntu-latest
@@ -42,7 +42,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: react-build
       
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -53,5 +53,6 @@ jobs:
           package: .
 
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5172778751244821990C462661DD79E8 }}
+
 
 
