--- a/.github/workflows/main_veer-webapp-frontend.yml
+++ b/.github/workflows/main_veer-webapp-frontend.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - veer-webapp-frontend
+name: Build and deploy React app - veer-webapp-frontend
 
 on:
   push:
@@ -12,23 +9,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '20'
+          cache: 'npm'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
+      # Clean install (recommended)
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Upload artifact for deployment job
+      # Build React app
+      - name: Build app
+        run: npm run build
+
+      # Upload ONLY build folder (IMPORTANT)
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: react-build
@@ -37,22 +38,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     steps:
-      - name: Download artifact from build job
+      - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
           name: react-build
-      
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+
+      # Deploy ONLY downloaded build content
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'veer-webapp-frontend'
-          slot-name: 'Production'
           package: .
-
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5172778751244821990C462661DD79E8 }}
-
-
-
