--- a/.github/workflows/main_veer-webapp-frontend.yml
+++ b/.github/workflows/main_veer-webapp-frontend.yml
@@ -1,4 +1,4 @@
-name: Build and deploy React app - veer-webapp-frontend
+name: Build and Deploy React App - veer-webapp-frontend
 
 on:
   push:
@@ -11,25 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          cache: 'npm'
 
-      # Clean install (recommended)
-      - name: Install dependencies
-        run: npm ci
+      # 🔹 Use npm install (not npm ci to avoid lock mismatch error)
+      - name: Install Dependencies
+        run: npm install
 
-      # Build React app
-      - name: Build app
+      - name: Build React App
         run: npm run build
 
-      # Upload ONLY build folder (IMPORTANT)
-      - name: Upload build artifact
+      # 🔹 Upload ONLY build folder
+      - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
           name: react-build
@@ -40,12 +38,12 @@ jobs:
     needs: build
 
     steps:
-      - name: Download build artifact
+      - name: Download Build Artifact
         uses: actions/download-artifact@v4
         with:
           name: react-build
 
-      # Deploy ONLY downloaded build content
+      # 🔹 Deploy ONLY build content to Azure
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
